--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.2",
     "@tauri-apps/api": "^1.5.3",
     "chart.js": "^4.4.1",
     "highcharts": "^11.2.0",
