--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "lint": "prettier --check src",
+    "format": "prettier --write src"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
