--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -22,9 +22,9 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: setup node
-        uses: actions/setup-node@v4
+        uses: pnpm/action-setup@v2
         with:
-          node-version: 21
+          version: 8
 
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
