--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -22,9 +22,10 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: setup node
-        uses: pnpm/action-setup@v2
+        uses: actions/setup-node@v4
         with:
-          version: 8
+          node-version: 21
+          cache: "pnpm"
 
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
