--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -25,7 +25,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 21
-          cache: "pnpm"
+          cache: "npm"
+
+      - name: install pnpm
+        run: npm install -g pnpm
 
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
