--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.3",
     "@tauri-apps/api": "^1.5.3",
     "chart.js": "^4.4.1",
+    "i18next": "^23.7.16",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-google-charts": "^4.0.1"
+    "react-google-charts": "^4.0.1",
+    "react-i18next": "^14.0.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.9",
