--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2021"
 tauri-build = { version = "1.5", features = [] }
 
 [dependencies]
-tauri = { version = "1.5", features = [ "window-set-size", "window-set-always-on-top", "window-start-dragging", "system-tray", "shell-open"] }
+tauri = { version = "1.5", features = [ "window-set-decorations", "window-set-always-on-top", "window-start-dragging", "system-tray", "shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 systemstat = "0.2.3"
