--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,11 +13,21 @@ edition = "2021"
 tauri-build = { version = "1.5", features = [] }
 
 [dependencies]
-tauri = { version = "1.5", features = [ "fs-write-file", "fs-read-file", "window-set-decorations", "window-set-always-on-top", "window-start-dragging", "system-tray", "shell-open"] }
+tauri = { version = "1.5", features = [
+    "fs-write-file",
+    "fs-read-file",
+    "window-set-decorations",
+    "window-set-always-on-top",
+    "window-start-dragging",
+    "system-tray",
+    "shell-open",
+] }
+tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
+tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
+tokio = { version = "1.35.1", features = ["time"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 systemstat = "0.2.3"
-tokio = { version = "1.35.1", features = ["time"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
