--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,6 +28,7 @@ tokio = { version = "1.35.1", features = ["time"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 systemstat = "0.2.3"
+sysinfo = "0.30.7"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
