change window state from context menu

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,8 @@
           "--no-default-features"
         ]
       },
-      "preLaunchTask": "ui:dev"
+      "preLaunchTask": "ui:dev",
+      "postDebugTask": "ui:dev:stop",
     }
   ]
 }
