--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
-    "react-i18next": "^14.0.5"
+    "react-i18next": "^14.0.5",
+    "tauri-plugin-context-menu": "^0.7.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.9",
