--- a/package.json
+++ b/package.json
@@ -12,27 +12,28 @@
     "format": "prettier --write src"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.10",
-    "@mui/material": "^5.15.10",
-    "@tauri-apps/api": "^1.5.3",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.20",
+    "@mui/material": "^5.15.20",
+    "@mui/x-charts": "^7.7.0",
+    "@tauri-apps/api": "^1.5.6",
     "@types/bytes": "^3.1.4",
     "bytes": "^3.1.2",
-    "i18next": "^23.8.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "i18next": "^23.11.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-google-charts": "^4.0.1",
-    "react-i18next": "^14.0.5",
+    "react-i18next": "^14.1.2",
     "tauri-plugin-context-menu": "^0.7.0"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.5.9",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
-    "@vitejs/plugin-react": "^4.2.1",
-    "prettier": "^3.2.5",
-    "typescript": "^5.3.3",
-    "vite": "^5.1.3"
+    "@tauri-apps/cli": "^1.5.14",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "prettier": "^3.3.2",
+    "typescript": "^5.4.5",
+    "vite": "^5.3.1"
   }
 }
