--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -10,21 +10,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.5", features = [] }
+tauri-build = { version = "2.0.0-beta", features = [] }
 
 [dependencies]
-tauri = { version = "1.5", features = [
-    "fs-write-file",
-    "fs-read-file",
-    "window-set-decorations",
-    "window-set-always-on-top",
-    "window-start-dragging",
-    "system-tray",
-    "shell-open",
-] }
-tauri-plugin-context-menu = "0.7.1"
-tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
-tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
+tauri = { version = "2.0.0-beta", features = ["tray-icon"] }
+# tauri-plugin-context-menu = "0.7.1"
+tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
+tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
 tokio = { version = "1.35.1", features = ["time"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
