chore: Update npm dependency to latest stable version

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "tauri-plugin-context-menu": "^0.7.0"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "2.0.0-beta.22",
+    "@tauri-apps/cli": "2.0.0-rc.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
