chore: Update node version in publish workflow to v9

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -49,6 +49,8 @@ jobs:
 
       - name: setup node
         uses: pnpm/action-setup@v4
+        with:
+          version: 9
 
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
