--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "cross-env WEBKIT_DISABLE_DMABUF_RENDERER=1 tauri",
+    "tauri": "tauri",
     "lint": "prettier --check src",
     "format": "prettier --write src"
   },
@@ -33,7 +33,6 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "cross-env": "^7.0.3",
     "prettier": "^3.3.2",
     "typescript": "^5.4.5",
     "vite": "^5.3.1"
