--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,6 +21,7 @@ systemstat = "0.2.3"
 sysinfo = "0.30.7"
 tauri-plugin-fs = "2"
 tauri-plugin-dialog = "2"
+reqwest ={ version ="0.12.19", features=["json"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
