--- a/package.json
+++ b/package.json
@@ -13,29 +13,28 @@
     "check": "biome check"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.20",
-    "@mui/material": "^5.15.20",
-    "@mui/x-charts": "^7.7.0",
-    "@tauri-apps/api": "2.2.0",
-    "@tauri-apps/plugin-fs": "2.2.0",
-    "@types/bytes": "^3.1.4",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^5.17.1",
+    "@mui/material": "^5.17.1",
+    "@mui/x-charts": "^7.29.1",
+    "@tauri-apps/api": "2.5.0",
+    "@tauri-apps/plugin-fs": "2.3.0",
+    "@types/bytes": "^3.1.5",
     "bytes": "^3.1.2",
-    "i18next": "^23.11.5",
+    "i18next": "^23.16.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-google-charts": "^4.0.1",
-    "react-i18next": "^14.1.2",
-    "tauri-plugin-context-menu": "^0.7.0"
+    "react-google-charts": "^4.0.7",
+    "react-i18next": "^14.1.3"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@tauri-apps/cli": "2.2.5",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "typescript": "^5.4.5",
-    "vite": "^5.3.1"
+    "@tauri-apps/cli": "2.5.0",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
+    "@vitejs/plugin-react": "^4.5.2",
+    "typescript": "^5.8.3",
+    "vite": "^5.4.19"
   }
 }
